<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="AdsNet9" Id="{42d615f5-2398-08c1-0ff4-8ceeefd4a042}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'analysis' := '-33'}
VAR_GLOBAL
	MonitorTestData		: MonitorTest;
	ReadTestData		: ReadTest;
	SymbolTestData		: SymbolTest;
	WriteTestData		: WriteTest;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>